# rust-api

./: .env-example  .gitignore  Cargo.toml  LICENCE  README.md
migrations/2023-12-15-110808_create_user/: up.sql
src/: main.rs  schema.rs
src/apps/auth/: controllers.rs  hash.rs  mod.rs  models.rs  routes.rs
src/common/: db.rs
src/config/: settings.rs
