[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web Framework
axum = {version = "0.7"}
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tower = "0.4"

# Logging requests/responses
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# Serialize and Deserialize JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ORM
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }

# Hashing passwords
password-hash = { version = "0.5", features = ["rand_core", "getrandom"] }
argon2 = "0.5"

# MISC
chrono = {version = "0.4", features = ["serde"]}
dotenvy = "0.15"

